helm-values/dr/platform/db-connector.yaml
# SignalForge 2026: DR Managed DB Proxy (Standby)
apiVersion: v1
kind: Service
metadata:
  name: postgres-service
  namespace: signalforge-dr
  labels:
    app.kubernetes.io/part-of: signalforge
    env: dr
spec:
  type: ExternalName
  # This points to your Failover/Secondary Azure Region Database
  externalName: signal-dr-db.postgres.database.azure.com
  ports:
  - port: 5432
    protocol: TCP
    targetPort: 5432
